other-vpol/imagepullpolicy-always/.kyverno-test/exceptions.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: imagepullpolicy-partial
  namespace: policy-exceptions
spec:
  policyRefs:
  - kind: ValidatingPolicy
    name: imagepullpolicy-always
  matchConditions:
  - name: exact-resource
    expression: request.namespace == 'policy-exceptions' && request.name == 'myapp-pod-2'
  images:
  - nginx:latest
