other-vpol/imagepullpolicy-always/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-1
  labels:
    app: myapp-1
spec:
  containers:
  - name: nginx
    image: nginx:latest
    imagePullPolicy: "Always"

---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-2
  labels:
    app: myapp-2
spec:
  containers:
  - name: nginx
    image: nginx:latest
    imagePullPolicy: "IfNotPresent"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: nginx
        image: nginx
        imagePullPolicy: "IfNotPresent"
        ports:
        - containerPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: nginx
        image: nginx
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
