other-vpol/imagepullpolicy-always/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: imagepullpolicy-always
policies:
- ../imagepullpolicy-always.yaml
resources:
- resource.yaml
results:
- isValidatingPolicy: true
  kind: Deployment
  policy: imagepullpolicy-always
  resources:
  - mydeploy1
  result: fail
- isValidatingPolicy: true
  kind: Pod
  policy: imagepullpolicy-always
  resources:
  - myapp-pod-2
  result: fail
- isValidatingPolicy: true
  kind: Deployment
  policy: imagepullpolicy-always
  resources:
  - mydeploy2
  result: pass
- isValidatingPolicy: true 
  kind: Pod
  policy: imagepullpolicy-always
  resources:
  - myapp-pod-1
  result: pass
